--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,275 @@
-body {
-    background: #000;
+/* fonts */
+
+@font-face {
+    font-family: "Raleway-regular";
+    src: url(../fonts/Raleway-Regular.ttf);
 }
+@font-face {
+    font-family: "Raleway-medium";
+    src: url(../fonts/Raleway-Medium.ttf);
+}
+@font-face {
+    font-family: "Raleway-bold";
+    src: url(../fonts/Raleway-Bold.ttf);
+}
+@font-face {
+    font-family: "Raleway-extrabold";
+    src: url(../fonts/Raleway-ExtraBold.ttf);
+}
+@font-face {
+    font-family: "Raleway-semibold";
+    src: url(../fonts/Raleway-SemiBold.ttf);
+}
+@font-face {
+    font-family: "Raleway-black";
+    src: url(../fonts/Raleway-Black.ttf);
+}
+@font-face {
+    font-family: "Raleway-medium";
+    src: url(../fonts/Raleway-Regular.ttf);
+}
+
+
+/* colors */
+
+:root {
+        --primary:#EEBF00;
+        --secondary:#232B38;
+        --ternary:#6C6C6C;
+        --danger:#FE4545;
+        --pure:#FEFEFE;
+        --light:#F0F0F0;
+        --heaven:#FFFFFF;
+        --footer:#2D333F;
+    }
+
+/* reset */
+ * {
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+ }
+
+ body {
+    --webkit-font-smoothing : antialiased;
+    /* --webkit-font-feature-settings: antialised; */
+ }
+
+
+.container {
+        width: 720px;
+        padding:0 15px;
+        margin:0 auto;
+    }
+    
+/* @media (min-width:576px){
+        .container{
+            max-width:540px;
+        }
+    }
+@media (min-width: 775.33px) {
+        .container {
+          max-width: 720px;
+        }
+      }
+      
+@media (min-width: 992px) {
+        .container {
+          max-width: 960px;
+        }
+      }
+      
+@media (min-width: 1200px) {
+        .container {
+          max-width: 1152px;
+        }
+    } */
+header.topbar {
+    background-color: black;
+    color: var(--pure);
+    font-family: "Raleway-semibold";
+    padding: 0.75rem 0;
+}
+
+header.topbar .auth  > div a{
+    color: var(--pure);
+    text-decoration: none;
+}
+
+header.topbar .icons a{
+    margin-right: 0.6rem;
+}
+
+header.topbar .auth .divider{
+    padding: 0 1rem;
+}
+
+header.topbar .auth > div img{
+    margin-right: 0.35rem;
+    /* padding-right: 0.35rem; */
+}
+
+/* header.topbar .container {
+    
+}
+
+
+header.topbar .container .auth {
+    
+} */
+
+.flex {
+    display: flex;
+}
+
+.justify-between {
+    justify-content: space-between;
+}
+
+.items-center {
+    align-items: center;
+}
+.justify-center {
+    justify-content: center;
+}
+    
+.top{
+    padding: 1.5rem 0;
+}
+
+nav .top .contact h5, nav .top .time h5{
+    font-family: 'Raleway-Black';
+    margin-bottom: 0.25rem;
+}
+
+nav .top .contact h6, nav .top .time h6{
+    font-family: 'Raleway-medium';
+    letter-spacing: 0.05rem;
+    font-size: 0.75rem;
+    color: var(--ternary);
+}
+
+nav .top .contact img, nav .top .time img{
+    margin-right: 0.9rem;
+}
+
+nav .navbar a{
+    transition: all 0.3s;
+    text-decoration: none;
+    /* margin: 1rem 1rem; */
+    padding: 1rem 1rem;
+    font-family: 'Raleway-semibold';
+    color: var(--secondary);
+    font-size: 1rem;
+}
+
+nav .navbar a.active{
+    background-color: var(--primary);
+    color: var(--pure);
+}
+
+nav .navbar a:hover{
+    background-color: var(--primary); 
+    color: var(--pure);
+}
+
+.magic-shadow{
+    position: relative;
+    background: var(--heaven);
+}
+
+.magic-shadow:after{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 69px;
+    background-image: url(../icons/shadow.svg);
+    background-repeat: no-repeat;
+    position: absolute;
+    bottom: -22px;
+    background-position: center;
+    z-index: -1;
+    
+}
+
+header.hero{
+    height:600px;
+    background-image: url(../images/hero.png);
+    background-position: 0% 0%;
+    background-repeat: no-repeat;
+    overflow: hidden;
+  }
+
+header.hero .welcome span{
+    font-family: "Raleway-bold";
+    color: var(--secondary);
+    margin-right: 0.75rem;
+}
+
+header.hero h1{
+    font-family: 'Raleway-extrabold';
+    color: var(--secondary);
+    font-size: 2.5rem;
+    margin-bottom: 0.75rem;
+}
+
+header.hero h1 span{
+    color: var(--primary);
+}
+
+header.hero p{
+    font-family: 'Ralway-medium';
+    width: 50%;
+    line-height: 1.5;
+    margin-bottom: 1rem;
+}
+
+.btn{
+    padding: 0.75rem 0.75rem;
+    cursor: pointer;
+    margin-right: 0.75rem;
+    font-size: 1.2rem;
+    border-radius: 4px;
+    border: 1px solid transparent;
+    line-height: 0.8;
+    transition: all 0.3s ease;
+}
+
+.btn-p {
+    background: var(--primary);
+    color: var(--heaven);
+}
+
+.btn-p:hover {
+    background: var(--heaven);
+    color: var(--primary);
+    border: 1px solid var(--primary);
+}
+.btn-s {
+    background: var(--secondary);
+    color: var(--heaven);
+}
+
+.btn-s:hover {
+    background: var(--heaven);
+    color: var(--secondary);
+    border: 1px solid var(--secondary);
+}
+
+header.hero .welcome{
+    margin-bottom: 0.25rem;
+}
+
+header.hero .hero-image{
+    position: absolute;
+    top: 40%;
+    right: 40%;
+}
+
+
+
+
+
+
+
+
