--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,6 @@
     font-family: "Raleway-black";
     src: url(../fonts/Raleway-Black.ttf);
 }
-@font-face {
-    font-family: "Raleway-medium";
-    src: url(../fonts/Raleway-Regular.ttf);
-}
-
 
 /* colors */
 
@@ -45,50 +40,51 @@
 
 /* reset */
  * {
-    padding: 0px;
-    margin: 0px;
+    padding: 0rem;
+    margin: 0rem;
     box-sizing: border-box;
  }
 
  body {
     --webkit-font-smoothing : antialiased;
     /* --webkit-font-feature-settings: antialised; */
+    height: 187.5rem;
  }
 
 
 .container {
         width: 100%;
-        padding:0 15px;
+        padding:0 .9375rem;
         margin:0 auto;
     }
     
-@media (min-width:576px){
+@media (min-width:36rem){
         .container{
-            max-width:540px;
+            max-width:33.75rem;
         }
     }
-@media (min-width: 7px) {
+@media (min-width: .4375rem) {
         .container {
-          max-width: 720px;
+          max-width: 45rem;
         }
       }
       
-@media (min-width: 992px) {
+@media (min-width: 62rem) {
         .container {
-          max-width: 960px;
+          max-width: 60rem;
         }
       }
       
-@media (min-width: 1200px) {
+@media (min-width: 75rem) {
         .container {
-          max-width: 1152px;
+          max-width: 72rem;
         }
     }
 header.topbar {
     background-color: black;
     color: var(--pure);
     font-family: "Raleway-semibold";
-    padding: 0.75rem 0;
+    padding: 12px 0;
 }
 
 header.topbar .auth  > div a{
@@ -97,16 +93,16 @@ header.topbar .auth  > div a{
 }
 
 header.topbar .icons a{
-    margin-right: 0.6rem;
+    margin-right: 9.6px;
 }
 
 header.topbar .auth .divider{
-    padding: 0 1rem;
+    padding: 0 16px;
 }
 
 header.topbar .auth > div img{
-    margin-right: 0.35rem;
-    /* padding-right: 0.35rem; */
+    margin-right: 5.6px;
+    /* padding-right: 5.6px; */
 }
 
 /* header.topbar .container {
@@ -134,33 +130,33 @@ header.topbar .container .auth {
 }
     
 .top{
-    padding: 1.5rem 0;
+    padding: 24px 0;
 }
 
 nav .top .contact h5, nav .top .time h5{
     font-family: 'Raleway-Black';
-    margin-bottom: 0.25rem;
+    margin-bottom: 4px;
 }
 
 nav .top .contact h6, nav .top .time h6{
     font-family: 'Raleway-medium';
-    letter-spacing: 0.05rem;
-    font-size: 0.75rem;
+    letter-spacing: .8px;
+    font-size: 12px;
     color: var(--ternary);
 }
 
 nav .top .contact img, nav .top .time img{
-    margin-right: 0.9rem;
+    margin-right: 14.4px;
 }
 
 nav .navbar a{
     transition: all 0.3s;
     text-decoration: none;
-    /* margin: 1rem 1rem; */
-    padding: 1rem 1.5rem;
+    /* margin: 16px 16px; */
+    padding: 16px 24px;
     font-family: 'Raleway-semibold';
     color: var(--secondary);
-    font-size: 1rem;
+    font-size: 16px;
 }
 
 nav .navbar a.active{
@@ -182,18 +178,35 @@ nav .navbar a:hover{
     content: '';
     display: block;
     width: 100%;
-    height: 69px;
+    height: 4.3125rem;
     background-image: url(../icons/shadow.svg);
     background-repeat: no-repeat;
     position: absolute;
-    bottom: -22px;
+    bottom: -1.375rem;
     background-position: center;
-    z-index: -1;
-    
+    z-index: -1; 
+}
+
+.magic-shadow-sm{
+    position: relative;
+    background: var(--heaven);
+}
+
+.magic-shadow-sm:after{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4.3125rem;
+    background-image: url(../icons/shadow-sm.svg);
+    background-repeat: no-repeat;
+    position: absolute;
+    bottom: -20px;
+    background-position: center;
+    z-index: -1; 
 }
 
 header.hero{
-    height:600px;
+    height:37.5rem;
     background-image: url(../images/hero.png);
     background-position: 0% 0%;
     background-repeat: no-repeat;
@@ -203,14 +216,14 @@ header.hero{
 header.hero .welcome span{
     font-family: "Raleway-bold";
     color: var(--secondary);
-    margin-right: 0.75rem;
+    margin-right: 12px;
 }
 
 header.hero h1{
     font-family: 'Raleway-extrabold';
     color: var(--secondary);
-    font-size: 2.5rem;
-    margin-bottom: 0.75rem;
+    font-size: 40px;
+    margin-bottom: 12px;
 }
 
 header.hero h1 span{
@@ -221,16 +234,16 @@ header.hero p{
     font-family: 'Ralway-medium';
     width: 50%;
     line-height: 1.5;
-    margin-bottom: 1rem;
+    margin-bottom: 16px;
 }
 
 .btn{
-    padding: 0.75rem 0.75rem;
+    padding: 12px 12px;
     cursor: pointer;
-    margin-right: 0.75rem;
-    font-size: 1.2rem;
-    border-radius: 4px;
-    border: 1px solid transparent;
+    margin-right: 12px;
+    font-size: 19.2px;
+    border-radius: .25rem;
+    border: .0625rem solid transparent;
     line-height: 0.8;
     transition: all 0.3s ease;
 }
@@ -243,7 +256,7 @@ header.hero p{
 .btn-primary:hover {
     background: var(--heaven);
     color: var(--primary);
-    border: 1px solid var(--primary);
+    border: .0625rem solid var(--primary);
 }
 .btn-secondry {
     background: var(--secondary);
@@ -253,22 +266,247 @@ header.hero p{
 .btn-secondry:hover {
     background: var(--heaven);
     color: var(--secondary);
-    border: 1px solid var(--secondary);
+    border: .0625rem solid var(--secondary);
 }
 
 header.hero .welcome{
-    margin-bottom: 0.25rem;
+    margin-bottom: 4px;
 }
 
 header.hero .hero-image{
     position: absolute;
-    top: -40%;
-    right: -3%;
+    top: -20%;
+    right: -2%;
 }
 
 header.hero .container{
     position: relative;
 }
+
+section{
+    padding: 64px 0;
+}
+
+section.top-products{
+    background: var(--light);
+}
+
+.section-heading{
+    font-family: 'Raleway-bold';
+    text-align: center;
+    position: relative;
+    margin-bottom: 64px;
+}
+
+.section-heading:after{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 1.875rem;
+    background-image: url(../icons/hr.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    bottom: -2.5rem;
+}
+
+section.top-products .food-slider .food-card{
+    background: var(--heaven);
+    padding: 1.5rem 0;
+    border-radius: 4px;
+    height: 402px;
+}
+
+section.top-products .food-slider .food-card .product-image img{
+    width: 80%;
+    height: 200px;
+    object-fit: contain;
+    padding-bottom: 1rem;
+}
+
+hr{
+    border: 1px solid var(--light);
+    opacity: 0.8;
+    margin: 1rem 0;
+}
+
+section.top-products .food-slider .food-card h2{
+    font-family: 'Raleway-bold';
+    font-size: 1.3rem;
+    margin-bottom: 0.25em;
+}
+/* utility class */
+.text-center{
+    text-align: center;
+}
+section.top-products .food-slider .food-card .star img{
+    margin-right: 0.25em;
+}
+section.top-products .food-slider .food-card .stars{
+    margin-bottom: .5rem;
+}
+
+section.top-products .food-slider .food-card .price{
+    font-family: "Raleway-medium";
+    color: var(--danger);
+    margin-bottom: 1rem;
+}
+section.top-products .food-slider .food-card button{
+    font-family: 'Raleway-medium';
+    color: var(--secondary);
+    background: var(--heaven);
+    border: 2px solid var(--primary);
+    /* padding: 10px; */
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    width: 50%;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+section.top-products .food-slider .food-card button img{
+    background: var(--primary);
+    padding: 0.5rem;
+    height: 32px;
+    margin-right: 1.2rem;
+}
+
+section.top-products .food-slider .food-card button:hover{
+    background: var(--primary);
+    color: var(--heaven);
+}
+
+.slick-slide{
+    margin: 0 27px;
+}
+
+.slick-list{
+    margin: 0 -27px;
+}
+
+.top-products .slider-btn{
+    width: 30px;
+    height: 30px;
+    background: var(--primary);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    outline: none;
+}
+
+.prev-btn{
+    position: absolute;
+    top: 46%;
+    left: -3rem;
+    z-index: 1;
+}
+.next-btn{
+    position: absolute;
+    top: 46%;
+    right: -3rem;
+    z-index: 1;
+}
+
+.top-products .slider{
+    position: relative;
+}
+
+.top-products .btn-wrapper{
+    margin-top: 45px;
+}
+
+.slick-track{
+    padding: 1rem 0;
+}
+
+section.about-meal{
+    background: var(--danger);
+}
+
+section.about-meal .container{
+    width: 100%;
+    height: 585px;
+}
+
+section.about-meal .container h2{
+    font-family: "Raleway-bold"
+}
+
+section.about-meal .container img{
+    
+}
+
+section.about-meal .container p{
+    font-family: "Raleway-regular"
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
