--- a/css/style.css
+++ b/css/style.css
@@ -615,14 +615,6 @@ section.subscribe .container > div:first-child img{
     width: 90%;
 }
 
-section.subscribe .container div:first-child{
-
-}
-
-section.subscribe .container div:last-child{
-
-}
-
 section.subscribe h1{
     font-family: 'Raleway-bold';
     font-size: 1.5rem;
@@ -658,7 +650,7 @@ section.subscribe .input-wrap button{
     font-size: 1rem;
     cursor: pointer;
     border: none;
-    padding: 0.8 2rem;
+    padding: 0.8rem 2rem;
     outline: none;
     /* padding: 14px;
     width: 174px; */
