--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,62 @@
           max-width: 72rem;
         }
     }
+
+.main-wrapper{
+    /* background: cyan; */
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+.nav-background{
+    width: 100%;
+    height: 100%;
+    background: var(--light);
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 0;
+    z-index: 1;
+}
+
+.nav-trigger{
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      padding: 15px;
+}
+
+.nav-trigger svg{
+    transform: rotate(90deg) scale(-1);
+    width: 40px;
+    height: 40px;
+}
+
+.site-content-wrapper{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: var(--heaven);
+    z-index: 2;
+    transition: all 0.3s ease;
+}
+
+.site-content-wrapper.scaled{
+    transform: scale(0.9) translateX(90%);
+    border-radius: 3px;
+    box-shadow: 0 3px 10px 0 var(--secondary);
+}
+
+.site-content{
+    width: 100%;
+    height: 100%;overflow: auto;
+}
+
+
+
+
 header.topbar {
     background-color: black;
     color: var(--pure);
