--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,9 @@
         }
     }
 
+
 .main-wrapper{
-    /* background: cyan; */
+  
     position: relative;
     width: 100%;
     height: 100vh;
@@ -106,6 +107,7 @@
       left: 0;
       z-index: 1;
       padding: 15px;
+      display: none;
 }
 
 .nav-trigger svg{
@@ -131,8 +133,13 @@
 
 .site-content{
     width: 100%;
-    height: 100%;overflow: auto;
+    height: 100%;
+    overflow-x: auto;
 }
+
+
+
+
 
 
 
@@ -926,3 +933,168 @@ footer.copyright{
 footer.copyright a{
     color: var(--primary);
 }
+
+.nav-background{
+    padding: 1rem;
+}
+
+.nav-background .mobile-nav ul{
+    padding: 1rem;
+}
+
+.nav-background .mobile-nav ul{
+    list-style-type: none;
+}
+
+.nav-background .mobile-nav li{
+    margin-bottom: 1rem;
+}
+
+.nav-background .mobile-nav a{
+    text-decoration: none;
+    color: var(--secondary);
+    font-family: 'Raleway-medium';
+}
+
+.nav-background .mobile-nav a:hover{
+    color: var(--primary);
+}
+
+.nav-background .contact, .nav-background .time{
+    padding: 1rem;
+    padding-left: 0;
+}
+
+.nav-background .contact img, .nav-background .time img{
+    margin-right: 1rem;
+}
+
+.nav-background .contact h5, .nav-background .time h5{
+    font-family: 'Raleway-bold';
+    margin-bottom: 0.25rem;
+    font-size: 1rem;
+}
+
+.nav-background .contact h6, .nav-background .time h6{
+    font-size: 0.75rem;
+}
+
+.nav-background .cart{
+    margin-bottom: 2rem;
+}
+
+.nav-background .cart a{
+    color: var(--secondary);
+    text-decoration: none;
+    font-family: 'Raleway-bold';
+}
+
+.nav-background .cart img{
+    margin-right: 0.75rem;
+    width: 20px;height: 20px;
+
+}
+
+@media (max-width:992px) {
+    .nav-trigger{
+        display: block;
+    }
+    header.topbar, nav{
+        display: none;
+    }
+    header.hero{
+       margin-top: -4rem;
+    }
+
+    header.hero .hero-image{
+        right: -160px;
+        top: 100px;
+    }
+    .top-products .slider-btn{
+        display: none !important;
+    }
+    .latest-news .article-wrapper{
+        flex-direction: column;
+    }
+    .latest-news .article-wrapper .card{
+        margin-bottom: 4rem;
+    }
+    footer .instagram-api .post-wrap > div{
+        width: calc(1/2*100% - (1 - 1/3)*10px);
+    }
+}
+
+@media(max-width:768px) {
+    .about-meal .about-meal-wrapper{
+        flex-direction: column;
+    }
+    .about-meal .about-meal-wrapper img{
+        width: 100%;
+        margin-bottom: 2rem;
+    }
+    section.our-services .card-wrapper{
+        flex-direction: column;
+    }
+    section.our-services .card-wrapper .service-card{
+        margin-bottom: 5rem;
+    }
+    footer .container{
+        flex-direction: column;
+    }
+    footer .box{
+        text-align: left;
+        margin-right: 0;
+        margin-bottom: 3rem;
+    }
+    footer .box:nth-child(3) h3{
+        text-align: left;
+    }
+    footer .box:nth-child(3) > div {
+        display: block;
+    }
+} 
+
+@media(max-width:576px) {
+    header.hero .hero-image{
+        right: -235px;
+        top: 150px;
+    }
+    header.hero .container{
+        padding-left: 1rem;
+    }
+    header.hero{
+        margin-top: -3rem;
+    }
+    section.big-deal .timer{
+        
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
